syntax = "proto3";

import "google/protobuf/empty.proto";

package domain;

option go_package = "./;proto";

message Post {
  string ID        = 1;
  string profileId     = 2;
  string body  = 3;
  string CreatedTime  = 4;
}

message CreatePostRequest {
  Post post  = 1;
}

message LikePostRequest {
  string username  = 1;
  string postId  = 2;
}

service Posts {
  rpc CreatePost (CreatePostRequest) returns (google.protobuf.Empty) {}
  rpc LikePost (LikePostRequest) returns (google.protobuf.Empty) {}
} 